Especificar que usuario y pass son admin

--- a/app-container/example_data.yaml
+++ b/app-container/example_data.yaml
@@ -615,6 +615,8 @@
   fields: {name: Can delete activity, content_type: 72, codename: delete_activity}
 
 #### Definicion de usuarios
+# usuario: admin
+# password: admin
 - model: auth.user
   pk: 1
   fields:
